unpackaged/main/default/objects/Ticket_Config__c/Ticket_Config__c.object-meta.xml
<CustomObject>
    <label>Ticket Config</label>
    <nameField>
        <label>Ticket Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>