unpackaged/main/default/objects/Ticket_Config__c/fields/Configuration_Json__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Json__c</fullName>
    <description>Json that configures all field together.</description>
    <label>Configuration Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>