unpackaged/main/default/objects/Ticket_Config__c/fields/Stamp_Ticket_Reason__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Ticket_Reason__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Stamp Ticket Reason</label>
    <type>Checkbox</type>
</CustomField>