unpackaged/main/default/objects/Ticket_Config__c/fields/Ticket_Reason__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Reason__c</fullName>
    <description>Reason for why ticket is being created.</description>
    <label>Ticket Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>