unpackaged/main/default/objects/Ticket_Config__c/fields/Ticket_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Sub_Reason__c</fullName>
    <description>Ticket Sub Reason</description>
    <label>Ticket Sub Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>